2010-08-31  Dustin J. Mitchell <dustin@zmanda.com>
	* NEWS: note removal of changers
	* changer-src/Makefile.am changer-src/chg-chio.pl
	  changer-src/chg-chs.sh changer-src/chg-iomega.pl
	  changer-src/chg-juke.sh changer-src/chg-mcutil.sh
	  changer-src/chg-mtx.sh changer-src/chg-null.sh changer-src/chg-rait.sh
	  changer-src/chg-rth.pl changer-src/chg-scsi-chio.c
	  changer-src/chg-scsi.c changer-src/libscsi.h changer-src/scsi-aix.c
	  changer-src/scsi-bsd.c changer-src/scsi-cam.c
	  changer-src/scsi-changer-driver.c changer-src/scsi-chio.c
	  changer-src/scsi-defs.h changer-src/scsi-hpux.c
	  changer-src/scsi-hpux_new.c changer-src/scsi-irix.c
	  changer-src/scsi-linux.c changer-src/scsi-proto.c
	  changer-src/scsi-solaris.c changer-src/sense.c: remove changers and
	  system-specific SCSI code
	* config/amanda/changer.m4: remove unnecessary checks
	* config/amanda/progs.m4: remove checks for chio, chs, and mcutil
	* configure.in: remove changer invocations

2010-08-31  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/driverio.c: Don't write negative origsizes to the taper

2010-08-31  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amcheck.c: drop root privs during the server check, so
	  that access() will test the dumpuser's perms, not root's perms

2010-08-31  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Taper_Scribe.pl: spell it part-cache-dir
	* installcheck/amtapetype.pl: spell it device-property
	* server-src/amcheckdump.pl: tar requires -tf, not tf, after a long
	  option
	* server-src/amserverconfig.pl: use Amanda::Util and mkpath instead of
	  mkdir

2010-08-31  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am: new tests
	* installcheck/amserverconfig.pl: run amserverconfig
	* installcheck/example.pl: test that templates parse properly
	* server-src/amserverconfig.pl: minor cleanup of old perl

2010-08-31  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/dumper.c changer-src/chg-scsi.c: use fseeko