@@ -1,3 +1,0 @@
-/arg-nonnull.h
-/c++defs.h
-/warn-on-use.h
